package com.wzy.flyweight;

public abstract class Website {
    abstract void use(User user);  //抽象方法
}
